<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="407dp"
        android:background="@color/colorBottomBackgroundSheet"
        app:behavior_hideable="true"
        app:behavior_peekHeight="10dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <ImageView
            android:padding="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:id="@+id/ivClose"
            android:src="@mipmap/close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            tools:ignore="RtlCompat"/>
    <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ivClose"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_ui_display_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textColor="@color/colorBottomSheetText"
            android:textSize="21sp"
            android:layout_marginStart="129dp"
            tools:ignore="RtlCompat"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tvDone"
              android:textSize="17sp"
              android:layout_marginTop="16dp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              android:textColor="@color/doneButtonSheet"
              android:text="@string/done"
              android:fontFamily="@font/sf_ui_display_regular"
              android:layout_marginEnd="20dp"
              tools:ignore="RtlCompat"/>
    <View android:id="@+id/line"
          android:layout_width="match_parent"
          android:background="@color/colorBackgroundFragment"
          app:layout_constraintTop_toBottomOf="@id/ivClose"
          app:layout_constraintLeft_toLeftOf="parent"
          android:layout_marginTop="12dp"
          android:layout_height="1dp"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/sf_ui_display_regular"
              app:layout_constraintTop_toBottomOf="@id/line"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginTop="19dp"
              android:textSize="19sp"
              android:textColor="@color/colorBottomSheetText"
              android:text="@string/create_new_playlist"
              android:layout_marginStart="20dp"
              tools:ignore="RtlCompat"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/sf_ui_display_regular"
              app:layout_constraintTop_toBottomOf="@id/line"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginTop="81dp"
              android:textSize="19sp"
              android:textColor="@color/colorBottomSheetText"
              android:text="@string/add_to_favorite"
              android:layout_marginStart="20dp" tools:ignore="RtlCompat"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/sf_ui_display_regular"
              app:layout_constraintTop_toBottomOf="@id/line"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginTop="143dp"
              android:textSize="19sp"
              android:textColor="@color/colorBottomSheetText"
              android:text="@string/classic_road_trip_songs"
              android:layout_marginStart="20dp"
              tools:ignore="RtlCompat"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/sf_ui_display_regular"
              app:layout_constraintTop_toBottomOf="@id/line"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginTop="203dp"
              android:textSize="19sp"
              android:alpha="0.5"
              android:textColor="@color/colorBottomSheetText"
              android:text="@string/workout"
              android:layout_marginStart="20dp"
              tools:ignore="RtlCompat"/>
    <ImageView android:layout_width="24dp"
               android:id="@+id/ivAdd"
               app:layout_constraintTop_toBottomOf="@+id/line"
               app:layout_constraintRight_toRightOf="parent"
               android:layout_marginTop="20dp"
               android:src="@mipmap/add"
               android:layout_height="24dp"
               android:layout_marginEnd="20dp"
               tools:ignore="RtlCompat"/>
    <ImageView android:layout_width="24dp"
               android:id="@+id/ivFavorite"
               app:layout_constraintTop_toBottomOf="@+id/line"
               app:layout_constraintRight_toRightOf="parent"
               android:layout_marginTop="81dp"
               android:src="@mipmap/favorite_2"
               android:layout_height="24dp"
               android:layout_marginEnd="20dp"
               tools:ignore="RtlCompat"/>
    <ImageView android:layout_width="24dp"
               android:id="@+id/noneImage"
               app:layout_constraintTop_toBottomOf="@+id/line"
               app:layout_constraintRight_toRightOf="parent"
               android:layout_marginTop="143dp"
               android:src="@mipmap/none"
               android:layout_height="24dp"
               android:layout_marginEnd="20dp"
               tools:ignore="RtlCompat"/>
    <ImageView android:layout_width="24dp"
               android:id="@+id/checkedImage"
               app:layout_constraintTop_toBottomOf="@+id/line"
               app:layout_constraintRight_toRightOf="parent"
               android:layout_marginTop="203dp"
               android:src="@mipmap/checked"
               android:layout_height="24dp"
               android:layout_marginEnd="20dp"
               tools:ignore="RtlCompat"/>
</androidx.constraintlayout.widget.ConstraintLayout>